[package]
name = "pulsemodels"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
time = { version = "0.3", features = [ "serde", "formatting", "parsing" ] }
uuid = { version = "1.17", features = [ "serde", "v4" ] }
validator = { version = "0.20.0", optional=true, features = [ "derive" ] }

ipnetwork = { version = "0.21.1", features = ["serde"]} 
sqlx = { version = "0.8", optional=true, features = [ "postgres", "macros", "uuid", "runtime-tokio-rustls", "time", "json", "ipnetwork" ] }
log="0.4.27"

[features]
default = ["api"]
api = []
db = ["sqlx"]
validate = ["validator"]
